--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
         </div>
         <p>Use headphones for a better experience</p>
 
+        <div id="loading">
+            <div class="lds-ripple"><div></div><div></div></div>
+        </div>
+
+        
+
 
         <div class="github-fork-me">
             <a href="https://github.com/rolyart/clear-minded">
